WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36884
Web Inspector: [REGRESSION] Can't creating new style with class foo if foo::after is defined.
https://bugs.webkit.org/show_bug.cgi?id=36884
Summary
Web Inspector: [REGRESSION] Can't creating new style with class foo if foo::a...
Pavel Feldman
Reported
2010-03-31 07:30:06 PDT
Several things including usability changes and regression fixes: - InspectorDOMAgent should clear internal state upon reset (we are re-using single dom agent instance throughout entire inspector controller lifetime) - Brought back blank style 'refresh' processing logic - remove it by mistake earlier - Blocked couple of click handlers so that double-click to edit was not expanding / collapsing the pane - There is no need to reach out for matched rules upon 'refresh' update - getting computed style is sufficient
Attachments
[PATCH] Proposed fix.
(10.65 KB, patch)
2010-03-31 07:36 PDT
,
Pavel Feldman
timothy
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2010-03-31 07:36:21 PDT
Created
attachment 52161
[details]
[PATCH] Proposed fix. One more thing: style selector had wrong code for pseudo elements (for a long time already). It was doing return instead of continue, as a result, styles declared with pseudo modifiers were preventing subsequent styles with same classes from being returned.
Pavel Feldman
Comment 2
2010-03-31 09:24:14 PDT
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/css/CSSStyleSelector.cpp M WebCore/inspector/InspectorDOMAgent.cpp M WebCore/inspector/front-end/StylesSidebarPane.js Committed
r56846
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug